--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,35 +2,12 @@ name: action Test
 
 on:
   workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-        type: choice
-        options:
-          - info
-          - warning
-          - debug
-      print_tags:
-        description: 'True to print to STDOUT'
-        required: true
-        type: boolean
-      tags:
-        description: 'Test scenario tags'
-        required: true
-        type: string
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
 
 jobs:
-  echo:
-    name: Echo:
+  build:
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
-      run:
-        echo "Hello world"
+      - uses: actions/checkout@v3
+      - name: Run a one-line script
+      run: echo Hello, world!
